@startuml
class ShoppingTask {
  ItemToBuy item
  TaskExecutionDate date
  NotificationStatusModel status
}

enum NotificationStatusModel { 
  PLANNED
  REPORTED
}
class ItemToBuy {
  String name
}
class TaskExecutionDate {
  LocalDateTime date
}

ShoppingTask o-- ItemToBuy
ShoppingTask o-- TaskExecutionDate
ShoppingTask --> NotificationStatusModel
@enduml
